[package]
name = "gdiroh"
version = "0.1.0"
edition = "2024"

[lib]
# this tells rust to compile the crate as a dynamic C library
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
godot = "0.4.3"
iroh = { version = "0.95.1", default-features = false }
iroh-gossip = "0.95.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }


[workspace]
resolver = "3"
members = ["xtask"]
